<resources>
    <string name="app_name">EventYo</string>
    <string name="hello_blank_fragment">EventYo</string>
    <string name="facebook_app_id">1341399529309943</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="fb_login_protocol_scheme">fb1341399529309943</string>
    <string-array name="Category">
        <item>Music</item>
        <item>Entertainment</item>
        <item>Technology</item>
        <item>Business</item>
        <item>Art</item>
        <item>Community</item>
        <item>Other</item>
    </string-array>
    <string name="Google_SignIn_Failed">Google+ sign in failed</string>
    <string name="FirebaseAuthFailed">Authentication failed</string>
    <string name="FirebaseAuthSucced">authentication succed</string>
    <string name="EventObject_Intent_Key">EventObject</string>
    <string name="Realtime_Firebase_Null_child_key">Null</string>
    <string name="Going_Tab_Identifier_Key">Database</string>
    <string name="Remove_Event_msg">Event Removed</string>
    <string name="Save_Event_msg">Event Saved</string>
    <string name="Firebase_database_user_path">Users</string>
    <string name="UserObject_Intent_Key">UserObject</string>
    <string name="Firebase_database_event_path">Events</string>
    <string name="Category_Tab_Name">Category</string>
    <string name="Calender_Tab_Name">Calender</string>
    <string name="Going_Tab_Name">Going</string>
    <string name="Search_Event_Tab_Name">Events</string>
    <string name="Search_User_Tab_Name">People</string>
    <string name="Fill_Email_Password">Please Fill Email/Password</string>
    <string name="Fill_Email_Password_Name">Please Fill Email/Password/Username</string>
    <string name="Nothing_Selected_msg">Nothing Selected</string>
    <string name="Event_Created_msg">Event Created</string>
    <string name="Fill_Feilds_msg">Please fill all fields</string>
    <string name="User_Profile_Updated_msg">User Profile Updated</string>
    <string name="ProgressDialogAuthMsg">Authenticating</string>
    <string name="ProgressDialogEventCreatingMsg">Creating Event..</string>
    <string name="ProgressDialogProfileUpdatingMsg">Updating Profile..</string>
    <string name="ProgressDialogLoadingMsg">Loading..</string>
    <string name="FacebookLogOnSuccess">facebook:onSuccess</string>
    <string name="FacebookLogOnCancel">facebook:onCancel</string>
    <string name="FacebokkLogOnError">facebook:onError</string>
    <string name="FirebaseLogOnCancelld">onCancelled</string>
    <string name="SignInWithEmailLogOnComplete">signInWithEmail:onComplete:</string>
    <string name="FirebaseAuthWithGoogleLog">firebaseAuthWithGoogle</string>
    <string name="signInWithCredentialSuccessLog">signInWithCredential:success</string>
    <string name="accessibility_EventPhoto">Event Photo</string>
    <string name="accessibility_AddEventPhoto">Add event photo</string>
    <string name="accessibility_AddEventTitle">Add event title</string>
    <string name="accessibility_AddEventDescription">Add event description</string>
    <string name="accessibility_AddEventCategory">Add event category</string>
    <string name="accessibility_AddEventLocation">Add event location</string>
    <string name="accessibility_AddEventDate">Add event date</string>
    <string name="accessibility_AddEventTime">Add event time</string>
    <string name="accessibility_SaveEvent">Save Event</string>
    <string name="accessibility_EditAccountInfo">Edit account information</string>
    <string name="accessibility_SignInGoogle">Sign in with Google</string>
    <string name="accessibility_SignInFacebook">Sign in with Facebook</string>
    <string name="accessibility_SignIn">Sign in</string>
    <string name="accessibility_CreateAccount">Create new account</string>
    <string name="accessibility_ChooseEventDate">Choose event date</string>
    <string name="accessibility_ChooseEventCategory">Choose event category</string>
    <string name="accessibility_CreateEvent">Create new event</string>
    <string name="Firebase_Photos_Path">Photos</string>
    <string name="Event_Going_Button_Going">Going</string>
    <string name="Event_Going_Button_NotGoing">Not Going</string>
    <string name="Create_Event_UploadPhotoText">Upload Event Cover Photo</string>
    <string name="Create_Event_TitleText">Event Title</string>
    <string name="Create_Event_DescriptionText">Event Description</string>
    <string name="Create_Event_LocationText">Event Loaction</string>
    <string name="Create_Event_DateText">Event Date</string>
    <string name="Create_Event_DateButton">Pick Date</string>
    <string name="Create_Event_TimeText">Event Time</string>
    <string name="Create_Event_TimeButton">Pick Time</string>
    <string name="Event_Description_Text">Event Description :</string>
    <string name="Event_Category_Text">Event Category :</string>
    <string name="Event_Location_Text">Event Location :</string>
    <string name="Event_Date_Text">Event Date :</string>
    <string name="Event_Time_Text">Event Time :</string>
    <string name="Event_User_Text">Event Created By :</string>
    <string name="User_Name_Text">User Name :</string>
    <string name="User_Email_Text">User Email :</string>
    <string name="User_Phone_Text">User Phone :</string>
    <string name="User_Birthday_Text">User Birthday :</string>
    <string name="User_Gender_Text">User Gender :</string>
    <string name="User_Job_Text">User Job :</string>
    <string name="User_Overview_Text">User Overview :</string>
    <string name="No_Events_Msg">No Events Yet</string>
    <string name="accessibility_EditAccountInfo_PickDate">Pick Date</string>
    <string name="RadioButton_Male">Male</string>
    <string name="RadioButton_Female">Female</string>
    <string name="auth_SigninWith_Text">Sign in With</string>
    <string name="auth_or_Text">or</string>
    <string name="auth_noAccount_text">*if you don\'t have account</string>
    <string name="auth_CreateAccount_Text">create one</string>
    <string name="Widget_Title_Text">Upcoming Events</string>
    <string name="auth_Email_Hint">Email</string>
    <string name="auth_Password_Hint">Password</string>
    <string name="auth_SignIn_Button">Sign in</string>
    <string name="auth_Username_Hint">Username</string>
    <string name="auth_Cancel_Button">Cancel</string>
    <string name="auth_Create_Button">Create</string>
    <string name="User_UploadProfilePhoto">Upload Profile Photo</string>
    <string name="create_event_menu_done">done</string>
    <string name="MainMenu_Myaccount">My Account</string>
    <string name="MainMenu_signout">Sign out</string>
    <string name="MainMenu_Search">Search</string>
    <string name="SearchWidget_Title">Search</string>
</resources>
