<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amrayoub.eventyo.EventActivity">
    <android.support.design.widget.AppBarLayout
        android:elevation="@dimen/appbar_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:id="@+id/photo_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <!--suppress AndroidLintContentDescription -->
                    <ImageView
                        android:contentDescription="@string/accessibility_EventPhoto"
                        android:id="@+id/event_photo"
                        android:src="@drawable/event_pic"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:maxHeight="200dp"
                        app:layout_collapseMode="parallax"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/scrim_gradient" />
                    <LinearLayout
                        android:onClick="uploadphoto"
                        android:orientation="horizontal"
                        android:layout_gravity="bottom"
                        android:layout_width="match_parent"
                        android:contentDescription="@string/accessibility_AddEventPhoto"
                        android:layout_height="wrap_content">
                        <TextView
                            android:padding="@dimen/Margin_Padding_12dp"
                            android:textSize="@dimen/Info_textSize"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Create_Event_UploadPhotoText"
                            android:textColor="@color/white"
                            />
                        <ImageView
                            android:padding="@dimen/Margin_Padding_12dp"
                            android:src="@drawable/ic_file_upload_24dp"
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                </FrameLayout>
                <EditText
                    android:id="@+id/create_event_title"
                    android:textSize="@dimen/Info_textSize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Info_margin"
                    android:background="#fff"
                    android:elevation="@dimen/Info_elevation"
                    android:padding="@dimen/Event_and_User_Info_padding"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/Create_Event_TitleText"/>
                <EditText
                    android:id="@+id/create_event_description"
                    android:textSize="@dimen/Info_textSize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Info_margin"
                    android:background="@color/white"
                    android:elevation="@dimen/Info_elevation"
                    android:padding="@dimen/Event_and_User_Info_padding"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:hint="@string/Create_Event_DescriptionText" />
                <FrameLayout
                    android:elevation="@dimen/Info_elevation"
                    android:background="@color/white"
                    android:layout_width="fill_parent"
                    android:layout_margin="@dimen/Info_margin"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:padding="@dimen/Event_and_User_Info_padding"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:contentDescription="@string/accessibility_AddEventCategory"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:spinnerMode="dialog"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:id="@+id/create_event_category"
                        android:textSize="@dimen/Info_textSize" />
                </FrameLayout>
                <EditText
                    android:id="@+id/create_event_location"
                    android:textSize="@dimen/Info_textSize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Info_margin"
                    android:background="@color/white"
                    android:clickable="true"
                    android:elevation="@dimen/Info_elevation"
                    android:padding="@dimen/Event_and_User_Info_padding"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:hint="@string/Create_Event_LocationText" />
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Info_margin"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/white"
                    android:elevation="@dimen/Info_elevation"
                    android:padding="@dimen/Event_and_User_Info_padding">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/create_event_date"
                    android:textSize="@dimen/Info_textSize"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/Create_Event_DateText" />
                    <Button
                        android:text="@string/Create_Event_DateButton"
                        android:id="@+id/Create_event_date_button"
                        android:layout_weight="4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Info_margin"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/white"
                    android:elevation="@dimen/Info_elevation"
                    android:padding="@dimen/Event_and_User_Info_padding">
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/create_event_time"
                        android:textSize="@dimen/Info_textSize"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/Create_Event_TimeText" />
                    <Button
                        android:id="@+id/Create_event_time_button"
                        android:layout_weight="4"
                        android:text="@string/Create_Event_TimeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</LinearLayout>

