<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amrayoub.eventyo.EventActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="@dimen/appbar_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/details_event_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleGravity="start"
            app:collapsedTitleTextAppearance="@style/collapsedappbar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleTextAppearance="@style/expandedappbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--suppress AndroidLintContentDescription -->
                <ImageView
                    android:id="@+id/details_event_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:maxHeight="200dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/scrim_gradient" />
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/details_event_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:contentInsetStart="@dimen/toolbar_content_dimen"
                app:contentInsetStartWithNavigation="16dp"
                app:layout_collapseMode="pin">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_image"
                android:layout_marginTop="@dimen/Info_Collection_margin_Top"
                android:orientation="vertical">
                <Button
                    android:contentDescription="@string/accessibility_SaveEvent"
                    android:id="@+id/details_button_saveEvent"
                    android:onClick="details_event_going"
                    android:layout_margin="@dimen/Margin_Padding_12dp"
                    android:elevation="@dimen/Info_elevation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/Save_Event_Button"
                    android:text="@string/Event_Going_Button_Going"
                    android:textSize="@dimen/Save_Event_TextSize"
                    android:background="@color/com_facebook_button_border_color_focused"
                    android:textColor="@color/accent"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="3"
                        android:clickable="true"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp"
                        android:text="@string/Event_Description_Text" />

                    <TextView
                        android:id="@+id/details_event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="2"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="3"
                        android:clickable="true"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp"
                        android:text="@string/Event_Category_Text" />

                    <TextView
                        android:id="@+id/details_event_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="2"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="3"
                        android:clickable="true"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp"
                        android:text="@string/Event_Location_Text" />

                    <TextView
                        android:id="@+id/details_event_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="2"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="3"
                        android:clickable="true"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp"
                        android:text="@string/Event_Date_Text" />

                    <TextView
                        android:id="@+id/details_event_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="2"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="3"
                        android:clickable="true"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp"
                        android:text="@string/Event_Time_Text" />

                    <TextView
                        android:id="@+id/details_event_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="2"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="3"
                        android:clickable="true"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp"
                        android:text="@string/Event_User_Text" />

                    <TextView
                        android:onClick="openuserInfo"
                        android:id="@+id/details_event_user"
                        android:textStyle="italic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Info_margin"
                        android:layout_weight="2"
                        android:elevation="@dimen/Info_elevation"
                        android:padding="20dp"
                        android:textColor="@color/light_blue"
                        android:clickable="true"
                        />
                </LinearLayout>
            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
